--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -1,5 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
+metadata:
+  name: backend-deployment
+  labels:
+    app: backend
 spec:
   template:
     metadata:
@@ -8,7 +12,6 @@ spec:
     spec:
       containers:
         - name: backend
-          # 여러분의 image 주소를 입력해주세요.
           image: krmp-d2hub-idock.9rum.cc/dev-test/repo_e6647ab2bd25
           imagePullPolicy: Always
           ports:
