--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     app: backend
 spec:
+  selector:
+    matchLabels:
+      app: backend
   template:
     metadata:
       labels:
