--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -15,8 +15,18 @@ spec:
     spec:
       containers:
         - name: backend
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_bc29d93fea49
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_574c3cc728ec
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-
+      tolerations:
+        - key: "node-role.dkosv3.9rum.cc/lb"
+          operator: "Equal"
+          value: "true"
+          effect: "NoSchedule"
+        - key: "node-role.kubernetes.io/master"
+          operator: "Exists"
+          effect: "NoSchedule"
+        - key: "node.kubernetes.io/unreachable"
+          operator: "Exists"
+          effect: "NoExecute"
